# dove-fw

./: CMakeLists.txt  Makefile  README.md  blink.c  blink.hex
board-utils/: SPI_Lib_C2S2.c  SPI_Lib_C2S2.h
board-utils/blink/: blink.c  blink.elf  blink.hex  blink.hex=  riscv64.cmake
board-utils/util/: caravel_hkflash.py
board_utils/blink/: Makefile  blink.c  blink.hex  blink.lst  src.c  src.h
filter/: bird_1.h  bird_2.h  src.c  src.h
include/: arith.h  bird_1.h  bird_2.h  fake.h  mem_array.h  src.h
riscv-app/: blink.c  blink.hex=  blink.lst
riscv-app/blink/: CMakeLists.txt  blink.hex
riscv-apps/: blink.c  filter-blink.c  final_uart_poll.c  iterate.c  mem-test.c  performance.c  uart_poll.c  uart_poll_working_12_7.c
src/: bitops.c  mem_array.c  src.c
tests/: blink.c  test_arith.c  test_bitops.c  test_filter.c
utils/: SPI_Lib_C2S2.c  SPI_Lib_C2S2.h  arith.c  arith.h  bitops.h  gpio.c  gpio.h  mem_array.c  mem_array.h  ring_buffer.c  ring_buffer.h  src.c  src.h
